fixed dialog board whitegap bug

--- a/src/app/components/board/board-dialog/board-dialog.component.scss
+++ b/src/app/components/board/board-dialog/board-dialog.component.scss
@@ -1,8 +1,3 @@
-:host {
-    display: block;
-    height: 100%;
-}
-
 .overlay {
     position: fixed;
     inset: 0;
